--- a/index.html
+++ b/index.html
@@ -32,18 +32,18 @@ role-tables:
 
 <div class="jumbotron">
   <!--<h1>Viswanathan Research Group at Carnegie Mellon University</h1>-->
-  <h1>Omega Proof Group at Shanghai University</h1>
+  <h1>Machine Proof Group at Shanghai University</h1>
 
   <!-- <p>
     Vision: Invent and Optimize Materials, Processes and Devices to Accelerate the Transition to Sustainable Transportation, Aviation, Chemicals and Fuels.
   </p>
   -->
   <p>
-    Vision: ML-driven Automated theorem proving
+    Vision: ML-driven Automated Reasoning
   </p>
 
   </p>
-     Research Direction: Automated theorem proving, XAI, Data Augmentation, Model Distillation
+     Research Interests: Automated Reasoning, Explainable AI(XAI), Human-Centered AI(HAI), Data Augmentation, Model Compression
   <p>
 
 
@@ -83,13 +83,13 @@ role-tables:
 
 
 
-<section>
+<!-- <section>
   <div id="community">
   <h2>Community</h2>
-  <p>Our group is involved in several efforts to spur community-building and research dissemination efforts.</p>
+  <p>ion efforts.</p>
 
   <p>Prof. Leng works in XXXXX. Find more information <a href="">here</a>.</p>
-</section>
+</section> -->
 
 
 <!-- 
