--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@ notitle: true
 
 # groups of columns of {roles: list, width: num, image: bool}
 role-tables:
-- - roles: [pi, postdoc, masters, staff, ugrad]
+- - roles: [pi, phd, postdoc, masters, staff, ugrad]
     width: 4
     image: true
-  - roles: [phd]
-    width: 8
+  - roles: []
+    width: 4
     image: true
 - - roles: [alumni-postdoc, alumni-phd, alumni-masters, alumni-ugrad]
     width: 8
