--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@ notitle: true
 
 # groups of columns of {roles: list, width: num, image: bool}
 role-tables:
-- - roles: [pi, staff, ugrad]
+- - roles: [pi]
+    width: 4
+    image: true
+- - roles: [staff, ugrad]
     width: 4
     image: true
   - roles: [phd, postdoc, masters]
