--- a/index.html
+++ b/index.html
@@ -20,6 +20,21 @@ role-tables:
 
 --- 
 
+<!-- - - roles: [pi]
+    width: 4
+    image: true
+- - roles: [phd, postdoc, masters]
+    width: 8
+    image: true
+  - roles: [staff, ugrad]
+    width: 4
+    image: true
+- - roles: [alumni-postdoc, alumni-phd, alumni-masters, alumni-ugrad]
+    width: 8
+    image: true
+
+---  -->
+
 <!-- role-tables:
 - - roles: [pi, masters, staff]
     width: 4
