Research.html_forward_ordered

--- a/research.html
+++ b/research.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 title: Research Projects
+
 ---
 
 <div class="card-columns">
@@ -8,7 +9,7 @@ title: Research Projects
     Sort the projects by date, putting those without dates last
     {% endcomment %}
     {% assign projects_by_date = site.projects | sort: 'last-updated', 'first' %}
-    {% assign projects_by_date = projects_by_date | reverse %}
+    {% assign projects_by_date = projects_by_date  %}
     {% for p in projects_by_date %}
         {% include project-card.html project=p %}
     {% endfor %}
