--- a/AI4MCM.html
+++ b/AI4MCM.html
@@ -261,70 +261,22 @@
 
 
         <hr size="2" width="100%" noshade align="left">
+
         <h3 align="left">
-            <font face="Candara">Co-organized by</font>
+            <font face="Microsoft YaHei">合办单位</font>
         </h3>
         <p align="left">
-            <font face="Candara">Academy of Mathematics and Systems Science - Peking University - Guangxi Minzu
-                University</font>
+            <font face="Microsoft YaHei">上海大学</font>
         </p>
         <hr size="2" width="100%" noshade align="left">
         <h3 align="left">
-            <font face="Candara"><strong>Previous Seminars</strong> </font>
+            <font face="Microsoft YaHei"><strong>往届研讨会</strong> </font>
         </h3>
         <div align="left">
             <ul>
                 <li>
-                    <font face="Candara"><a href="https://math-bo.github.io/DESC2023/">Differential Equations with
-                            Symbolic Computation</a> (Beijing, China, September 16-17, 2023)</font>
-                    <font face="Candara">, with a&nbsp;<a href="https://math-bo.github.io/mcs-si-2024/">special
-                            issue</a>&nbsp;of Mathematics in Computer Science</font>
-                </li>
-                <li>
-                    <font face="Candara"><a href="http://www.cc4cm.org/sms/ISSE/index.html">International Seminar on
-                            Solving Equations</a>&nbsp;(Nanning, China, July 12-13, 2019)</font>
-                </li>
-                <li>
-                    <font face="Candara"><a href="http://dasa2018.cc4cm.org/">Differential, Difference, and Algebraic
-                            Systems with Application</a>&nbsp;(Nanning, China, January 29-31, 2018)</font>
-                </li>
-                <li>
-                    <font face="Candara"><a href="http://gc2015.cc4cm.org/">Geometric Computation</a>&nbsp;(Nanning,
-                        China, February 2-4, 2015), with a&nbsp;<a
-                            href="http://gc2015.cc4cm.org/mcs-gc/index.html">special issue</a>&nbsp;of Mathematics in
-                        Computer Science</font>
-                </li>
-                <li>
-                    <font face="Candara"><a href="http://pas2013.cc4cm.org/">Program Verification, Automated Debugging
-                            and Symbolic Computation</a>&nbsp;(Beijing, China, October 23-25, 2013), with a&nbsp;<a
-                            href="http://pas2013.cc4cm.org/jsc-pas.html">special issue</a>&nbsp;of Journal of Symbolic
-                        Computation</font>
-                </li>
-                <li>
-                    <font face="Candara"><a href="http://pas2012.cc4cm.org/">Program Verification, Automated Debugging
-                            and Symbolic Computation</a>&nbsp;(Beijing, China, October 10-12, 2012)</font>
-                </li>
-                <li>
-                    <font face="Candara"><a
-                            href="https://www.math.pku.edu.cn/teachers/xiabc/html/SRATC2008.html">Symbolic Real Algebra
-                            and Trustworthy Computing</a>&nbsp;(Shanghai, China, April 3-5, 2008)</font>
-                </li>
-                <li>
-                    <font face="Candara"><a href="http://www.cc4cm.org/sce2006/">Symbolic Computation in
-                            Education</a>&nbsp;(Beijing, China, April 12-14, 2006), with a&nbsp;<a
-                            href="http://wang.cc4cm.org/Image/sce.jpg">book</a>&nbsp;published by World Scientific
-                    </font>
-                </li>
-                <li>
-                    <font face="Candara"><u><a href="http://wang.cc4cm.org/DESC2004/index.html">Differential Equations
-                                with Symbolic Computation</a></u>&nbsp;(Beijing, China, April 14-16, 2004), with
-                        a&nbsp;<a href="http://wang.cc4cm.org/Image/desc.jpg">book</a>&nbsp;published by Birkhauser
-                    </font>
-                </li>
-                <li>
-                    <font face="Candara"><a href="http://wang.cc4cm.org/SGC2002/index.html">Geometric
-                            Computation</a>&nbsp;(Hefei, China, April 24-26, 2002), with a&nbsp;<a
-                            href="http://wang.cc4cm.org/gc.html">book</a>&nbsp;published by World Scientific</font>
+                    <font face="Microsoft YaHei"><a
+                            href="https://math-bo.github.io/DESC2023/">上海大学研讨会</a>（上海，中国，2023年十月）</font>
                 </li>
             </ul>
         </div>
