Update AI4MCM.html: small fix

--- a/AI4MCM.html
+++ b/AI4MCM.html
@@ -16,11 +16,11 @@
         </font>
 
         <h1 align="center">
-            <font color="blue" face="Microsoft YaHei">计算机数学与智能数学专题研讨会 CMIMS 2024</font>
+            <font color="blue" face="Microsoft YaHei">计算机数学与智能数学专题研讨会 2024</font>
         </h1>
 
         <div align="center">
-            <font color="darkgreen" size="5" face="Times New Roman"><b>Shanghai, China · November 12-13, 2024</b></font>
+            <font color="darkgreen" size="5" face="Microsoft YaHei"><b>中国，上海 · 2024年11月16日-17日</b></font>
         </div>
 
         <h2 align="center">
@@ -41,10 +41,10 @@
 
         <hr size="2" width="100%" noshade align="center">
 
-        <h3 align="center">
+        <h3 align="left">
             <font face="Microsoft YaHei" style="font-size: 30px;">欢迎</font>
         </h3>
-        <p align="left" style="width: 80%;">
+        <p align="left">
             <font face="Microsoft YaHei">
                 本次会议邀请计算机代数、本项目邀请计算机代数、数学机械化、机器学习、组合图论与优化等领域的国内外专家担任“融合符号推理与超图模型的
                 几何机器证明专题讲习班”的主讲人，围绕计算机代数与 符号计算理论、机器证明、数学机械化、矩阵与多项式理论、组合图论与优化、可解释的
@@ -82,17 +82,9 @@
         <hr size="2" width="100%" noshade align="left">
 
         <h3 align="left">
-            <font face="Microsoft YaHei">特邀报告</font>
+            <font face="Microsoft YaHei">论坛报告</font>
         </h3>
         <ul>
-            <li>
-                <div align="left">
-                    <font face="Microsoft YaHei" align="left"><a
-                            href="https://faculty.uestc.edu.cn/zhangjingzhong/zh_CN/index.htm">张景中</a>
-                        （电子科技大学）</font>
-                    </font>
-                </div>
-            </li>
             <li>
                 <div align="left">
                     <font face="Microsoft YaHei" align="left"><a
@@ -100,11 +92,6 @@
                         （上海大学）</font>
                 </div>
             </li>
-        </ul>
-        <h3 align="left">
-            <font face="Microsoft YaHei">分论坛报告</font>
-        </h3>
-        <ul>
             <li>
                 <div align="left">
                     <font face="Microsoft YaHei" align="left"><a
@@ -231,8 +218,8 @@
                     <font face="Microsoft YaHei"><strong>酒店信息<br></strong></font>
                     <p align="left">
                         <font face="Microsoft YaHei">
-                            <strong>唯实国际文化交流中心<br>
-                                地址：中国 上海 宝山区 上大路 99号<br>
+                            <strong>上海宝山上大路亚朵酒店<br>
+                                地址：中国上海宝山区大场镇上大路69弄<br>
                                 邮编：200444<br>
                                 电话：(8610) 62308899</strong>
                         </font>
@@ -245,7 +232,7 @@
                 <li>
                     <font face="Microsoft YaHei"><strong>通勤信息<br></strong></通勤信息>
                         <p align="left">
-                            <font face="Microsoft YaHei">从上海虹桥站来到上海大学北门大概需要一个半小时。</font>
+                            <font face="Microsoft YaHei">从上海虹桥来到上海大学北门大约需要一个半小时。</font>
                         </p>
                 </li>
             </ul>
@@ -276,7 +263,7 @@
             <ul>
                 <li>
                     <font face="Microsoft YaHei"><a
-                            href="https://math-bo.github.io/DESC2023/">上海大学研讨会</a>（上海，中国，2023年十月）</font>
+                            href="https://math-bo.github.io/DESC2023/">上海大学研讨会</a>（上海，中国，2023年10月）</font>
                 </li>
             </ul>
         </div>
