--- a/MPMFAI.html
+++ b/MPMFAI.html
@@ -24,16 +24,16 @@
     </div>
 
     <h2 align="center">
-        <font face="Microsoft YaHei"><a href="CMIMS会议通知.pdf">
+        <font face="Microsoft YaHei"><a href="./files/announcement.pdf">
             <font color="blue">会议通知</font>
         </a>
             <font color="orange">|</font>
-            <font face="Microsoft YaHei"><a href="ForICM_Program.pdf">
+            <font face="Microsoft YaHei"><a href="./files/program.pdf">
                 <font color="blue">会议议程</font>
             </a>
                 <font color="orange">|</font>
             </font>
-            <font face="Microsoft YaHei"><a href="ForICM.png">
+            <font face="Microsoft YaHei"><a href="./files/picture.jpg">
                 <font color="blue">会议照片</font>
             </a></font>
         </font>
@@ -43,7 +43,7 @@
 
     <p align="left">
         <font face="Microsoft YaHei">
-            由上海大学主办的机器证明与人工智能数理基础专题研讨会将于2024年11月13日在中国上海举行。研讨会的宗旨为团结凝聚数学与人工智能领域的科研工作者，弘扬科学精神，加强学术交流，促进学科交叉，致力于推进数学与人工智能的融合与发展。
+            由上海大学主办的机器证明与人工智能数理基础专题研讨会将于2024年11月23日在中国上海举行。研讨会的宗旨为团结凝聚数学与人工智能领域的科研工作者，弘扬科学精神，加强学术交流，促进学科交叉，致力于推进数学与人工智能的融合与发展。
             本次研讨会将围绕计算机代数与符号计算理论、机器证明、人工智能的数理基础、数学机械化、矩阵与多项式理论、组合图论与优化、可解释的机器学习、强化学习、图神经网络等多个专题，邀请国内外知名专家作为报告人，开展一系列学术交流与教学活动。此次研讨会希望通过一系列的专题授课以及研讨，加强各高校之间的学术联系。
             研讨会的举办将为与会学者提供一个高水平的交流平台，助力研究人员深入了解机器证明和人工智能数理基础的前沿研究动态。通过报告与讨论，学员们将能够掌握机器证明的发展历史和基础理论、现代人工智能技术在机器证明的应用以及人工智能的数理基础的核心方法，拓展数学与人工智能的融合思路。诚邀全国各科研院所、高校及企业的青年学者、科技工作者和学生参加。
         </font>
